--- a/MatrixSDK/MatrixSDK/MatrixSDK.csproj
+++ b/MatrixSDK/MatrixSDK/MatrixSDK.csproj
@@ -38,9 +38,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Exceptions.cs" />
-    <Compile Include="MatrixClient.cs" />
-    <Compile Include="MatrixRoom.cs" />
-    <Compile Include="MatrixUser.cs" />
     <Compile Include="MatrixAPI.cs" />
     <Compile Include="Structures\MatrixLogin.cs" />
     <Compile Include="Structures\MatrixProfile.cs" />
@@ -59,6 +56,10 @@
     <Compile Include="Structures\Events\MatrixMReceipt.cs" />
     <Compile Include="Structures\MatrixCreateRoom.cs" />
     <Compile Include="JSONSerializer.cs" />
+    <Compile Include="Client\MatrixRoom.cs" />
+    <Compile Include="Client\MatrixUser.cs" />
+    <Compile Include="Client\MatrixClient.cs" />
+    <Compile Include="MatrixAttributes.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -67,5 +68,15 @@
   <ItemGroup>
     <Folder Include="Structures\" />
     <Folder Include="Structures\Events\" />
+    <Folder Include="Client\" />
   </ItemGroup>
+  <ProjectExtensions>
+    <MonoDevelop>
+      <Properties>
+        <Policies>
+          <DotNetNamingPolicy DirectoryNamespaceAssociation="Hierarchical" ResourceNamePolicy="FileFormatDefault" />
+        </Policies>
+      </Properties>
+    </MonoDevelop>
+  </ProjectExtensions>
 </Project>
