--- a/MatrixSDK/MatrixSDK/MatrixSDK.csproj
+++ b/MatrixSDK/MatrixSDK/MatrixSDK.csproj
@@ -29,12 +29,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Package>monodevelop</Package>
-    </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -65,16 +64,17 @@
     <Compile Include="Backends\IMatrixAPIBackend.cs" />
     <Compile Include="Backends\MatrixRequestError.cs" />
     <Compile Include="Backends\MatrixErrorCode.cs" />
+    <Compile Include="Client\MatrixMediaFile.cs" />
+    <Compile Include="AppService\MatrixAppservice.cs" />
+    <Compile Include="AppService\ServiceRegistration.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
   <ItemGroup>
     <Folder Include="Structures\" />
     <Folder Include="Structures\Events\" />
     <Folder Include="Client\" />
     <Folder Include="Backends\" />
+    <Folder Include="AppService\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
@@ -85,4 +85,7 @@
       </Properties>
     </MonoDevelop>
   </ProjectExtensions>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
