--- a/MatrixSDK/MatrixSDK/MatrixSDK.csproj
+++ b/MatrixSDK/MatrixSDK/MatrixSDK.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>MatrixSDK</RootNamespace>
     <AssemblyName>MatrixSDK</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <UseMSBuildEngine>False</UseMSBuildEngine>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,6 +37,9 @@
     </Reference>
     <Reference Include="YamlDotNet">
       <HintPath>..\packages\YamlDotNet.3.9.0\lib\net35\YamlDotNet.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.4.3.6\lib\net45\NLog.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -70,6 +74,7 @@
     <Compile Include="Client\MatrixMediaFile.cs" />
     <Compile Include="AppService\MatrixAppservice.cs" />
     <Compile Include="AppService\ServiceRegistration.cs" />
+    <Compile Include="Structures\MatrixTyping.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
