--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: csharp
 solution: Matrix.sln
+os: linux
 dist: trusty
 mono: none
-dotnet:
-  - 2.0.0-preview1-005977
+dotnet: 2.0.0-preview1-005977
 install:
   - dotnet restore
 script:
