--- a/Matrix/Tests/Tests.csproj
+++ b/Matrix/Tests/Tests.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.8.0-alpha1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="Moq" Version="4.7.63"/>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../Matrix.csproj"/>
