--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,13 @@ language: csharp
 solution: Matrix.sln
 os: linux
 mono: none
+dist: xenial
 dotnet: 2.2
 install:
   - dotnet restore
 script:
   - dotnet build
   - dotnet test
+global:
+    - DOTNET_SKIP_FIRST_TIME_EXPERIENCE=true
+    - DOTNET_CLI_TELEMETRY_OPTOUT=1
